# mnist-test

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
models/: autokeras_model.keras  mnist_12.onnx  mnist_model.keras
src/: training.py
