[tool.poetry]
name = "mnist-streamlit"
version = "0.1.0"
description = "A small Streamlit project demoing a Keras-backed neural network trained on the MNIST dataset."
authors = ["jsulz <j.sulzdorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
keras = "^3.3.3"
tensorflow = "^2.16.1"
streamlit-drawable-canvas = "^0.9.3"
pillow = "^10.3.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
